<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_investimento"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                tools:text="Fundos de Investimento"/>

            <TextView
                android:id="@+id/tv_fund_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                tools:text="Vinci Valorem FI Multimercado" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separador"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/tv_what_is"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_investimento"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                tools:text="O que é?" />

            <TextView
                android:id="@+id/tv_definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_investimento"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                tools:text="O Fundo tem por objetivo proporcionar aos seus cotistas rentabilidade no longo prazo através de investimentos" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <TextView
                android:id="@+id/tv_risk_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                tools:text="Grau de risco de investimento"/>

            <!-- View com os graus de risco -->

            <TextView
                android:id="@+id/tv_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                tools:text="Mais informações sobre o investimento"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TableRow
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:padding="10dp"/>

                    <TextView
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/text_investimento"
                        android:text="@string/fundo"
                        android:gravity="end"/>

                    <TextView
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/text_investimento"
                        android:text="@string/cdi"
                        android:gravity="end"/>

                </TableRow>

                <TableRow
                    android:id="@+id/row_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/text_investimento"
                        android:text="@string/no_mes"/>

                    <TextView
                        android:id="@+id/tv_month_fund"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:gravity="end"
                        tools:text="0,3%"/>

                    <TextView
                        android:id="@+id/tv_month_cdi"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:gravity="end"
                        tools:text="0,3%"/>

                </TableRow>

                <TableRow
                    android:id="@+id/row_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/text_investimento"
                        android:text="@string/no_ano"/>

                    <TextView
                        android:id="@+id/tv_year_fund"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:gravity="end"
                        tools:text="13,01%"/>

                    <TextView
                        android:id="@+id/tv_year_cdi"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:gravity="end"
                        tools:text="12,08%"/>

                </TableRow>

                <TableRow
                    android:id="@+id/row_twelve_months"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="@color/text_investimento"
                        android:text="@string/doze_meses"/>

                    <TextView
                        android:id="@+id/tv_twelve_months_fund"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:gravity="end"
                        tools:text="17,9%"/>

                    <TextView
                        android:id="@+id/tv_twelve_months_cdi"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:gravity="end"
                        tools:text="17,6%"/>

                </TableRow>

            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separador"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>